--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,16 @@ body {
   margin: 0 auto;
 }
 
+section {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 2fr 2fr;
+}
+
+/* HEADER */
 header {
   background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.4)),
     url(/images/granada.jpg);
@@ -55,8 +65,42 @@ header a {
   display: inline-block;
 }
 
+/* FOOTER */
+footer {
+  color: white;
+  background-image: linear-gradient(
+      rgba(40, 33, 23, 0.8),
+      rgba(40, 33, 23, 0.9)
+    ),
+    url(/images/12.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 100px 0;
+}
+header h3 {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.5;
+}
+footer p {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+}
+footer ul {
+  padding: 0;
+}
+footer li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+footer a {
+  color: white;
+  opacity: 0.7;
+}
 
-@media (max-width: 900px) {
+@media (max-width: 960px) {
   header {
     padding: 60px 0;
   }
